Covid Health API

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,85 @@
 node_modules
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/appsettings.Development.json
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/appsettings.json
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/aws-beanstalk-tools-defaults.json
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/CovidHealthApi.deps.json
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/CovidHealthApi.dll
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/CovidHealthApi.pdb
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/CovidHealthApi.runtimeconfig.dev.json
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/CovidHealthApi.runtimeconfig.json
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/Properties/launchSettings.json
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/db/germany.json
+CovidHealthApi/CovidHealthApi/bin/Debug/netcoreapp2.2/db/india.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/appsettings.Development.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/appsettings.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/aws-beanstalk-tools-defaults.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/CovidHealthApi.deps.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/CovidHealthApi.dll
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/CovidHealthApi.pdb
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/CovidHealthApi.runtimeconfig.dev.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/CovidHealthApi.runtimeconfig.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/Properties/launchSettings.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/db/germany.json
+CovidHealthApi/CovidHealthApi/bin/Release/netcoreapp2.2/db/india.json
+CovidHealthApi/CovidHealthApi/obj/CovidHealthApi.csproj.nuget.cache
+CovidHealthApi/CovidHealthApi/obj/CovidHealthApi.csproj.nuget.dgspec.json
+CovidHealthApi/CovidHealthApi/obj/CovidHealthApi.csproj.nuget.g.props
+CovidHealthApi/CovidHealthApi/obj/CovidHealthApi.csproj.nuget.g.targets
+CovidHealthApi/CovidHealthApi/obj/project.assets.json
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.AssemblyInfo.cs
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.AssemblyInfoInputs.cache
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.assets.cache
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.csproj.FileListAbsolute.txt
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.csprojAssemblyReference.cache
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.dll
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.pdb
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.RazorAssemblyInfo.cache
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.RazorAssemblyInfo.cs
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/CovidHealthApi.RazorTargetAssemblyInfo.cache
+CovidHealthApi/CovidHealthApi/obj/Debug/netcoreapp2.2/project.razor.json
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.AssemblyInfo.cs
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.AssemblyInfoInputs.cache
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.assets.cache
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.csproj.FileListAbsolute.txt
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.csprojAssemblyReference.cache
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.pdb
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.RazorAssemblyInfo.cache
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.RazorAssemblyInfo.cs
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/CovidHealthApi.RazorTargetAssemblyInfo.cache
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/appsettings.Development.json
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/appsettings.json
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/aws-beanstalk-tools-defaults.json
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/CovidHealthApi.deps.json
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/CovidHealthApi.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/CovidHealthApi.pdb
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/CovidHealthApi.runtimeconfig.json
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/DnsClient.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/dotnet-aspnet-codegenerator-design.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.CodeAnalysis.CSharp.Workspaces.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.CodeAnalysis.Workspaces.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.VisualStudio.Web.CodeGeneration.Contracts.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.VisualStudio.Web.CodeGeneration.Core.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.VisualStudio.Web.CodeGeneration.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.VisualStudio.Web.CodeGeneration.Templating.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.VisualStudio.Web.CodeGeneration.Utils.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Microsoft.VisualStudio.Web.CodeGenerators.Mvc.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/MongoDB.Bson.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/MongoDB.Driver.Core.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/MongoDB.Driver.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/MongoDB.Libmongocrypt.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/Newtonsoft.Json.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/NuGet.Frameworks.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/SharpCompress.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/System.Composition.AttributedModel.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/System.Composition.Convention.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/System.Composition.Hosting.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/System.Composition.Runtime.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/System.Composition.TypedParts.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/System.Runtime.CompilerServices.Unsafe.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/System.Text.Encoding.CodePages.dll
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/web.config
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/db/germany.json
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/db/india.json
+CovidHealthApi/CovidHealthApi/obj/Release/netcoreapp2.2/PubTmp/Out/runtimes/win/lib/netcoreapp2.0/System.Text.Encoding.CodePages.dll
