Updated Readme file for Running API

--- a/CovidHealthApi/CovidHealthApi/appsettings.json
+++ b/CovidHealthApi/CovidHealthApi/appsettings.json
@@ -5,9 +5,8 @@
     "Database": "covid",
     "Host": "localhost",
     "Port": 27017,
-    "User": "covid",
-    "Password": "Welc0me!23"
-
+    "User": "username",
+    "Password": "password"
   },
 
   "Logging": {
